# Autonomous-Robotics-Cooperation-project

./: .gitignore  CMakeLists.txt  LICENSE  README.md  pres.pptx
g01_challenge/: CMakeLists.txt  README.md  package.xml
g01_challenge/launch/: challenge_packages.launch  challenge_planners.launch
g01_fsm/: CMakeLists.txt  README.md  package.xml
g01_fsm/include/g01_fsm/: states.h
g01_fsm/launch/: challenge.launch  challenge_planners.launch
g01_fsm/src/: fsm.cpp
g01_gripper/: CMakeLists.txt  README.md  package.xml
g01_gripper/include/: ObjectBox.h  g01_gripper.h
g01_gripper/launch/: grip.launch  grip_perc.launch
g01_gripper/rviz/: our_config.rviz
g01_gripper/src/: ObjectBox.cpp  g01_gripper.cpp  grip.cpp
g01_move/: CMakeLists.txt  README.md  install.sh  package.xml  uninstall.sh
g01_move/conf/: costmap_common.yaml  costmap_global_laser.yaml  costmap_global_static.yaml  costmap_local.yaml  planner.yaml
g01_move/conf/config/: costmap_common.yaml  costmap_global_static.yaml  global_planner_params.yaml  planner.yaml
g01_move/conf/launch/: amcl.launch  gmapping.launch  map_server.launch  move_base.launch  robot_navigation.launch
g01_move/conf/maps/: arena.yaml
g01_move/conf/yaml/: costmap_common.yaml  costmap_global_laser.yaml  costmap_global_static.yaml  costmap_local.yaml  planner.yaml
g01_move/config/: costmap_common.yaml  costmap_global_static.yaml  costmap_local.yaml  global_planner_params.yaml  planner.yaml
g01_move/include/: g01_move.h
g01_move/include/g01_move/: states.h
g01_move/launch/: amcl.launch  amcl_real.launch  challenge.launch  map_server.launch  move.launch  move_base.launch  move_nav.launch  robot_navigation.launch
g01_move/maps/: arena.yaml
g01_move/rviz/: marrtino_cfg.rviz
g01_move/src/: g01_move.cpp  move.cpp
g01_perception/: CMakeLists.txt  README.md  output.txt  package.xml
g01_perception/include/: tags.h
g01_perception/launch/: discover.launch
g01_perception/msg/: PoseStampedArray.msg
g01_perception/rviz/: our_config.rviz
g01_perception/src/: discover.cpp
hw1_perception/: CMakeLists.txt  README.md  package.xml
hw1_perception/launch/: discover.launch
hw1_perception/rviz/: our_config.rviz
hw1_perception/src/: discover.cpp
hw2_moveit/: package.xml
hw2_moveit/launch/: grab.launch
hw2_moveit/src/: grab.cpp
intro_tutorial/: package.xml
intro_tutorial/src/: example1_a.cpp
src/: discover.cpp
two-wheeled-robot-motion-planning/scripts/: bug0.py  bug1.py  bug2.py  follow_wall.py  go_to_point.py  obstacle_avoidance.py  reading_laser.py
video/: spinning_wheel.mkv
